; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_vpx.c_CloseDecoder.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_vpx.c_CloseDecoder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }
%struct.vpx_image = type { %struct.TYPE_5__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @CloseDecoder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CloseDecoder(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.vpx_image*, align 8
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = bitcast i32* %7 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %3, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** %4, align 8
  store i8* null, i8** %5, align 8
  br label %12

12:                                               ; preds = %19, %1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = call %struct.vpx_image* @vpx_codec_get_frame(i32* %14, i8** %5)
  store %struct.vpx_image* %15, %struct.vpx_image** %6, align 8
  %16 = load %struct.vpx_image*, %struct.vpx_image** %6, align 8
  %17 = icmp ne %struct.vpx_image* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %12
  br label %24

19:                                               ; preds = %12
  %20 = load %struct.vpx_image*, %struct.vpx_image** %6, align 8
  %21 = getelementptr inbounds %struct.vpx_image, %struct.vpx_image* %20, i32 0, i32 0
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = call i32 @free(%struct.TYPE_5__* %22)
  br label %12

24:                                               ; preds = %18
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = call i32 @vpx_codec_destroy(i32* %26)
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %29 = call i32 @free(%struct.TYPE_5__* %28)
  ret void
}

declare dso_local %struct.vpx_image* @vpx_codec_get_frame(i32*, i8**) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1

declare dso_local i32 @vpx_codec_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
